docs/TC39_Test262_Maintainers/plaintext/2023-06.txt
2023-06-02
[11:30:52.0634] <linusg>
Could anyone point me to recent test262 results for JSC/SM/V8? Ever since test262.report is dead those seem increasingly difficult to find (or my search skills are getting worse 😄)


2023-06-04
[14:02:25.0694] <linusg>
Answering my own question: I brought this up elsewhere which led to canadahonk creating https://test262.fyi/ 🥳


2023-06-05
[03:56:21.0014] <canadahonk>
very happy to answer questions and take requests :)

[04:19:33.0620] <canadahonk>
* very happy to answer questions and take in feedback :)

[04:47:37.0841] <canadahonk>
* very happy to answer questions and take in feedback/feature requests :)


2023-06-06
[16:18:41.0944] <shu>
ptomato: every Temporal test fails on builds without i18n because of temporalHarness.js

[16:19:06.0799] <shu>
```
/b/s/w/ir/test/test262/data/harness/temporalHelpers.js:10: SyntaxError: Invalid regular expression: /^[$_\p{ID_Start}][$\u200C\u200D\p{ID_Continue}]*$/u: Invalid property name in character class
const IDENTIFIER = /^[$_\p{ID_Start}][$\u200C\u200D\p{ID_Continue}]*$/u;
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Invalid regular expression: /^[$_\p{ID_Start}][$\u200C\u200D\p{ID_Continue}]*$/u: Invalid property name in character class
```

[16:19:17.0204] <shu>
err, temporalHelpers.js


2023-06-07
[00:05:50.0364] <ptomato>
I'll take a look, thanks for the heads up!

[01:53:50.0013] <ptomato>
shu: no problem to change that since it's only used for formatting property names, but as far as I can tell from reading ECMA-262, even implementations without i18n are required to support those properties?

[01:55:43.0030] <ptomato>
(by "those properties" I mean `ID_Start` and `ID_Continue`)

[01:58:39.0541] <canadahonk>
yeah, wasn't that part of https://github.com/tc39/proposal-regexp-unicode-property-escapes ?

[06:34:43.0047] <canadahonk>
https://github.com/tc39/test262/pull/3842 for ref btw :)

[07:39:36.0473] <shu>
ptomato: huh, oh really? let's see

[07:51:04.0662] <shu>
so i think what's happening is, V8 depends on ICU for those property names, which is pretty reasonable, because that's where those property names are

[07:51:21.0485] <shu>
and the "no i18n" build is actually the "no ICU dependency" build

[07:55:02.0286] <shu>
in any case i think i agree with your reading of the spec, but in practice i don't know yet

[07:57:36.0543] <canadahonk>
it no longer uses those in main now btw

[07:57:53.0789] <shu>
thank you

[08:40:33.0735] <Richard Gibson>
I agree with ptomato, and it looks to me like not just `/…/u` regular expressions but also String.prototype.toLowerCase and toUpperCase depend upon the Unicode Character Database (e.g., `"İKÅΩↃΣ".toLowerCase() === "i̇kåωↄς"` and `"ßⅶςµﬀև".toUpperCase() === "SSⅦΣΜFFԵՒ"` must hold in every implementation). UAX #44 should probably move from Bibliography to Normative References. 🤔

[09:47:10.0879] <shu>
we should probably discuss if implementations that actually don't ship Intl (Moddable) still support these features, or if we need to redraw the optionality line for stuff along ICU lines

[09:47:23.0437] <shu>
the no-i18n build for V8 is mostly not that well supported

[09:48:04.0965] <shu>
that is, in an ideal world, we'd only have one configuration of V8 that always includes i18n

[11:18:37.0321] <Richard Gibson>
the version of Moddable XS fetched by esvu at least correctly supports both the above toUpperCase()/toLowerCase() behavior and `/…/u` regular expressions with `\p{<property name>}` contents


2023-06-08
[02:09:36.0398] <canadahonk>
just wondering, are tests for some stage 2/3 proposals missing just because no one has created them yet or are there other reasons?

[02:13:46.0748] <ptomato>
just because no one has created them yet

[02:17:47.0176] <canadahonk>
also, docs (`CONTRIBUTING.md`) say "stage 3" but there's also stage 2 features so is that not really a restriction (now)?

[02:21:14.0442] <ptomato>
it's still a restriction; folks are welcome to write tests for stage 2 proposals but generally we keep them as open unmerged PRs

[02:21:39.0584] <ptomato>
there are some that are merged, but I believe those are proposals that were previously stage 3 and got reverted

[02:21:58.0108] <canadahonk>
makes sense, thanks!


2023-06-09
[09:07:05.0221] <canadahonk>
related making harness depend less on modern features - I found that Rhino have issues just for these cases which might be helpful: https://github.com/mozilla/rhino/issues?q=is%3Aissue+is%3Aopen+label%3A%22test262+harness%22 (cc linusg)

[09:07:21.0272] <canadahonk>
 * related making harness depend less on modern features - I found that Rhino have issues tagged for these cases which might be helpful: https://github.com/mozilla/rhino/issues?q=is%3Aissue+is%3Aopen+label%3A%22test262+harness%22 (cc linusg)

